hphp/test/zend/bad/ext-spl/bug31348.php
<?php
$a = Array("some","blah");
$i = new ArrayIterator($a);

$ci = new CachingIterator($i);

$ci->rewind();

?>
===DONE===